--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
 /*Your styles*/
+
 @import url("./color.css");
 @import url("./guide.css");
 @import url("./head.css");
+
 @import url("./loading.css");
 body {
     margin: 0;
@@ -19,7 +21,7 @@ ul{
     list-style: none;
     padding: 0;
 }
-
+/*
 .head-large{
     margin: 5px 0;
     font-size: 25px;
@@ -29,7 +31,7 @@ ul{
     margin: 2px;
     font-size: 13px;
 }
-
+*/
 .container{
     display: grid;
     grid-template-columns: 100%;
@@ -102,7 +104,7 @@ ul{
             background: rgb(120, 196, 124);
         }
 
-
+/*
 #setGuide > .guideForm{
     margin-top: 15px;
 }
@@ -114,7 +116,7 @@ ul{
         .guideForm__margin >.guideForm__input{
             width: 50px;
         }
-
+*/
 .hide{
     display: none;
 }   
@@ -149,7 +151,7 @@ by the settings of the CC application
     color:inherit;
     font-size:inherit;
 }
-
+/*
 .topcoat-button{
     background: rgb(49, 49, 49);
 }
@@ -157,3 +159,4 @@ by the settings of the CC application
         background: rgb(30,30,30);
         cursor: pointer;
     }
+*/
